--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Reader",
+    "name": "EasyReader",
     "version": "1.0.0",
     "manifest_version": 2,
     "description": "A customizable reader extension.",
